--- a/.gitignore
+++ b/.gitignore
@@ -21,11 +21,13 @@ docs/agenthub-master-plan*.docx
 
 # Sensitive/local runtime telemetry
 data/delegations/records.json
+data/delegations/*.db
 data/evals/results.json
 data/trust/scores.json
 data/trust/usage_events.json
 data/cost/events.json
 data/pilots/
+data/registry/
 
 # Secrets
 .env
