--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ docs/agenthub-master-plan*.docx
 # Sensitive/local runtime telemetry
 data/delegations/records.json
 data/delegations/*.db
+data/billing/
 data/evals/results.json
 data/trust/scores.json
 data/trust/usage_events.json
