S43: add DevHub collaboration review gates and promotion workflow

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ docs/agenthub-master-plan*.docx
 # Sensitive/local runtime telemetry
 data/delegations/records.json
 data/delegations/*.db
+data/devhub/
 data/billing/
 data/evals/results.json
 data/trust/scores.json
