--- a/.github/workflows/quality-gates.yml
+++ b/.github/workflows/quality-gates.yml
@@ -1,4 +1,4 @@
-name: Playwright E2E
+name: Quality Gates
 
 on:
   pull_request:
@@ -7,10 +7,30 @@ on:
       - main
 
 jobs:
-  e2e:
+  pytest-targeted:
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements.txt
+          python -m pip install -e .
+
+      - name: Run targeted hardening tests
+        run: pytest tests/auth/test_access_enforcement_s53.py tests/operator/test_operator_ui.py tests/gate/test_architecture_guardrails_s53.py -q
+
+  playwright-e2e:
     runs-on: ubuntu-latest
     timeout-minutes: 30
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -56,3 +76,18 @@ jobs:
           name: playwright-test-results
           path: test-results
           if-no-files-found: ignore
+
+  quality-gates:
+    if: always()
+    needs:
+      - pytest-targeted
+      - playwright-e2e
+    runs-on: ubuntu-latest
+    steps:
+      - name: Enforce required upstream checks
+        run: |
+          echo "pytest-targeted: ${{ needs.pytest-targeted.result }}"
+          echo "playwright-e2e: ${{ needs.playwright-e2e.result }}"
+          if [ "${{ needs.pytest-targeted.result }}" != "success" ] || [ "${{ needs.playwright-e2e.result }}" != "success" ]; then
+            exit 1
+          fi
