--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ uvicorn==0.32.1
 pydantic==2.10.3
 pyyaml==6.0.3
 jsonschema==4.26.0
+slowapi==0.1.9
+python-json-logger==3.2.1
 pytest==8.3.4
 httpx==0.28.1
 rich==13.9.4
