--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ pydantic==2.10.3
 pyyaml==6.0.3
 jsonschema==4.26.0
 slowapi==0.1.9
+PyJWT[crypto]>=2.10.1
+cryptography>=44.0.0
 python-json-logger==3.2.1
 pytest==8.3.4
 httpx==0.28.1
